[package]
name = "bevy-async-ecs"
version = "0.7.0"
authors = ["Mark Old <dlom234@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Asynchronous interface for Bevy ECS"
repository = "https://github.com/dlom/bevy-async-ecs"
keywords = ["bevy", "ecs", "async", "game"]
categories = ["game-engines", "asynchronous"]

[dependencies]
bevy_app = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false }
bevy_core = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false }
bevy_utils = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false }
bevy_ecs = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false }
bevy_hierarchy = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false, features = ["bevy_app"] }
async-channel = "2"

[dev-dependencies]
pollster = "0.4"
rand = { version = "0.8", default-features = false, features = ["small_rng", "getrandom"] }
bevy = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types" }
